# city-itinerary-service

./: .env  Cargo.toml  README.md
migrations/: first-commit.sql
src/: db.rs  handlers.rs  lib.rs  main.rs  routes.rs
src/handlers/: cities.rs  itineraries.rs  mod.rs  openai.rs  users.rs
src/models/: city.rs  itinerary.rs  mod.rs  user.rs
tests/: openai_tests.rs
