[package]
name = "city-itinerary-service"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = "0.37"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
dotenv = "0.15"
